--- a/src/SomeCompany.Erp.DbMigrator/appsettings.json
+++ b/src/SomeCompany.Erp.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Erp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=192.168.3.103;Database=Erp;User Id=sa;Password=invernalia;;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
     "Clients": {
