--- a/src/SomeCompany.Erp.Web/appsettings.json
+++ b/src/SomeCompany.Erp.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44350"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Erp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=192.168.3.103;Database=Erp;User Id=sa;Password=invernalia;;MultipleActiveResultSets=true"
   },
   "AuthServer": {
     "Authority": "https://localhost:44350"
