--- a/src/SomeCompany.Erp.DbMigrator/appsettings.json
+++ b/src/SomeCompany.Erp.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=192.168.3.103;Database=Erp;User Id=sa;Password=invernalia;;MultipleActiveResultSets=true"
+    "Default": "Server=DESKTOP-2R6GV01\\MSSQLSERVER01;Database=Erp;User Id=sa;Password=invernalia;MultipleActiveResultSets=true"
   },
   "IdentityServer": {
     "Clients": {
