--- a/src/SomeCompany.Erp.Domain.Shared/SomeCompany.Erp.Domain.Shared.csproj
+++ b/src/SomeCompany.Erp.Domain.Shared/SomeCompany.Erp.Domain.Shared.csproj
@@ -25,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Localization\Erp\es.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.6" />
   </ItemGroup>
 
